[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Crumbs.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pancake.png" type="Texture" id=2]
[ext_resource path="res://Pancake.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Crunch.wav" type="AudioStream" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
angular_velocity = 520.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
color_ramp = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Pancake" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="EatParticles" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Crunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
